# module

ATM/: atm  atm.h  bank_machine.h  dispatcher.h  interface_machine.h  main.cpp  makefile  message.h  withdraw.h
IPC/: locker.h
alloc_pool/: myngx_alloc.hpp  mysgi_alloc.h  test_myngxalloc  test_myngxalloc.cpp  test_mysgialloc  test_mysgialloc.cpp
chatserver/: CMakeLists.txt  README.md
chatserver/include/: public.h
chatserver/include/server/: chatserver.h  chatservice.h
chatserver/include/server/db/: db.h
chatserver/include/server/model/: friendmodel.h  groupmodel.h  offlinemessagemodel.h  user.h  usermodel.h
chatserver/include/server/redis/: redis.h
chatserver/src/client/: CMakeLists.txt  main.cpp
chatserver/src/server/: chatserver.cpp  chatservice.cpp  main.cpp
chatserver/src/server/db/: db.cpp  mysql.conf
chatserver/src/server/model/: friendmoel.cpp  offlinemessagemodel.cpp  usermodel.cpp
conn_pool/: conn.cpp  conn.h  conn_pool  conn_pool.cpp  conn_pool.h  makefile  mysql.conf  test.cpp
linux高性能服务器编程代码/net/: IPC_PRIVATE.cc  a  a.out  backlog.c  byteorder.c  chatserver.cc  child_deadlk.cc  deadlk.cc  echoserve_tcpudp.cc  (+12 more)
lock/: levellcok.h  spin_lock.h
net/: CGIserver.c  chatserver_shm.cc  connect_timeo.cc  daytime.c  echoserve.c  erro_accept.c  header_netinet_in.c  iovrw.c  libevent.cc  msg_oob.c  set_uid.c  sigurg.cc  tcpbuf.c  tee.c
pool/: CGIserver.cc  a  http_conn.cpp  http_conn.h  processpool.h  stress_test.cc
safequeue/: atomic_queue.h  benchmark  benchmark.cpp  casqueue.h  lock_queue.h
timeo/: lst_timer.hpp  wheel_timer.hpp
(+14 files in other folders)
